--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -1,1 +1,44 @@
 /* pages/mine/mine.wxss */
+.user{
+  height: 160px;
+  align-items: center;
+  padding: 20px ;
+  border-bottom: 6px solid #eee;
+  text-align: center;
+}
+.avater{
+  width: 70px;
+  height: 70px;
+  margin: 0 auto;
+}
+.avater image{
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+.tips{
+  padding-top: 20px;
+}
+.setting{
+  border-bottom: 5px solid #eee;
+}
+.item{
+  font-size: 16px;
+  display: flex;
+  height: 50px;
+  align-items: center;
+  border-bottom: 1px solid #eee;
+  margin-left: 10px;
+  padding-right: 10px;
+}
+.arrow{
+  flex: 1;
+  text-align: right;
+  width: 16px;
+  height: 16px;
+  /* color: #666; */
+}
+.arrow image{
+  width: 16px;
+  height: 16px;
+}
